# microkernelArchitecturePattern

./: CMakeLists.txt
Core/: Core.cpp  Core.h
Plugin/: Event.h  HerPlugin.cpp  HerPlugin.h  MyPlugin.cpp  MyPlugin.h  Plugin.cpp  Plugin.h
Plugin/Core/: Core.cpp  Core.h  main.cpp
Signal/: signal.hpp  signal_enhance.hpp  signal_enhance_test.cpp  signal_test.cpp
